<?xml version="1.0"?>
<package format="2">
  <name>steppable_region_publisher_voxblox</name>
  <version>0.0.0</version>
  <description>The steppable_region_publisher_voxblox package</description>

  <maintainer email="hiraoka@jsk.imi.i.u-tokyo.ac.jp">Naoki-Hiraoka</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>voxblox</depend>
  <depend>choreonoid</depend>
</package>
